RBM Public Broadcast Fix - min height fix on mobile view for ADS slider

--- a/public/css/broadcast/default/responsive.css
+++ b/public/css/broadcast/default/responsive.css
@@ -20,6 +20,10 @@
   .navbar-nav {
     margin: 0;
   }
+    #fqCarousel {
+        min-height: inherit!important;
+        margin-bottom: 20px!important;
+    }
 }
 
 @media (max-width: 991px) {
@@ -59,6 +63,10 @@
 }
 
 @media (max-width: 480px) {
+    #fqCarousel {
+        min-height: inherit!important;
+        margin-bottom: 20px!important;
+    }
   .navbar-brand {
     margin-left: 10px;
   }
